src/test/ui/issues/issue-11681.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-11681.rs:12:20
   |
LL |   let testValue = &Test; //~ ERROR borrowed value does not live long enough
   |                    ^^^^ temporary value does not live long enough
LL |   return testValue;
LL | }
   | - temporary value only lives until here
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 11:15...
  --> $DIR/issue-11681.rs:11:15
   |
LL | fn createTest<'a>() -> &'a Test {
   |               ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
